--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -46,13 +46,15 @@
   "watchVideo": "Смотреть видео",
   "videoDesc": "От производства до доставки",
 
-  "big-title-1": "Натуральность и<br/>свежесть у вашего <br/ >порога",
-  "big-title-2": "С Eleven Water <br/> чистота и комфорт <br/> в вашей жизни",
-  "big-title-3": "Доверие в каждой<br/>капле!",
+  "big-title-1": "Одна цель <br/> одна команда",
+  "text-1": "Durable Development — это опытная и сплочённая команда. <br/> Причина, по которой мы уверенно реализуем каждый проект — <br/> это скоординированная командная работа. Каждый участник — специалист в своей области.",
 
-  "text-1": "Каждая капля — шаг к здоровой жизни,<br />и мы доставим её прямо к вам домой.",
-  "text-2": "Из природы к вам — чистая,<br />полезная и надежная вода.",
-  "text-3": "Начните свой день с чистой воды<br />и живите здорово.",
+  "big-title-2": "Современный транспорт – <br/> быстро и надёжно",
+  "text-2": "У нас есть вся необходимая техника, <br/> чтобы выполнять строительные процессы в срок. Современные грузовики, <br/> спецтехника и безопасная логистическая система — наше главное преимущество.",
+
+  "big-title-3": "Доверие — <br/> верность обещаниям",
+  "text-3": "Клиенты обращаются к нам за качественными проектами, <br/> сданными в срок. Мы всегда готовы оправдать это доверие."
+,
 
   "services": {
     "section_title": "Услуги",
@@ -152,22 +154,29 @@
     }
   },
   "choose": {
-    "badge": "Никаких<br/>ограничений",
-    "why_title": "Почему Eleven Water?",
-    "why_subtitle": "Вам понравится свежесть нашей природной воды",
-    "feature1_title": "Высокое качество",
-    "feature1_desc": "Каждая капля проходит строгий контроль качества.",
-    "feature2_title": "Без контрактов",
-    "feature2_desc": "Наслаждайтесь удобным обслуживанием без обязательных договоров.",
-    "feature3_title": "Надежно",
-    "feature3_desc": "Надежный партнер в доставке и обслуживании.",
-    "feature4_title": "Сертифицировано",
-    "feature4_desc": "Компания с международными сертификатами качества и безопасности.",
-    "feature5_title": "Доступные цены",
-    "feature5_desc": "Качественная вода по доступным ценам — для каждого клиента.",
-    "feature6_title": "Быстрая доставка",
-    "feature6_desc": "Ваш заказ будет доставлен в кратчайшие сроки."
-  },
+    "badge": "Устойчивое<br/>Развитие",
+    "why_title": "Почему выбирают нас?",
+    "why_subtitle": "Надежное партнёрство на пути к устойчивому развитию",
+
+    "feature1_title": "Экологические решения",
+    "feature1_desc": "Строительные материалы и технологии, не наносящие вреда природе.",
+
+    "feature2_title": "Энергоэффективность",
+    "feature2_desc": "Теплоизоляция зданий и системы с низким энергопотреблением.",
+
+    "feature3_title": "Долговечное строительство",
+    "feature3_desc": "Прочные конструкции, рассчитанные на долгие годы эксплуатации.",
+
+    "feature4_title": "Контроль качества",
+    "feature4_desc": "Тщательная проверка и гарантия на каждом этапе.",
+
+    "feature5_title": "Команда специалистов",
+    "feature5_desc": "Над каждым проектом работают опытные инженеры и дизайнеры.",
+
+    "feature6_title": "Оперативное строительство",
+    "feature6_desc": "Гарантия сдачи проекта в установленный срок."
+  }
+,
   "features": {
     "title_sub": "Вода и Вы",
     "title_main": "Источник здоровья",
@@ -488,13 +497,13 @@
     },
     "services": {
       "family": {
-        "title": "Для семьи",
-        "desc": "Обеспечьте свою семью чистой водой с Eleven Water.",
+        "title": "Индивидуальные дома",
+        "desc": "Услуги по проектированию и строительству прочных и современных домов.",
         "button": "Подробнее"
       },
       "office": {
-        "title": "Для офиса",
-        "desc": "Идеальное решение для обеспечения чистой водой в офисе.",
+        "title": "Офисные и коммерческие здания",
+        "desc": "Строительство функциональных и привлекательных зданий для вашего бизнеса.",
         "button": "Подробнее"
       }
     },
@@ -553,6 +562,92 @@
       "submit": "Искать",
       "title": "Последние поисковые запросы",
       "recent": ["Качество воды", "Минералы", "Бутылка", "Безопасность", "План"]
+    }
+  },
+  "services-section": {
+    "subtitle": "Наши услуги",
+    "title": "Инновационные решения для устойчивого строительства",
+
+    "service1": {
+      "title": "Экологически чистые строительные материалы",
+      "description": "Все материалы, используемые в строительстве, экологически безопасны, прочны и соответствуют современным требованиям."
+    },
+
+    "service2": {
+      "title": "Энергоэффективные инженерные системы",
+      "description": "Мы предлагаем современные инженерные решения, позволяющие экономить энергию в системах вентиляции, отопления и электроснабжения."
+    },
+
+    "service3": {
+      "title": "Зеленая архитектура и дизайн",
+      "description": "В наших проектах мы сохраняем экологический баланс, используя естественное освещение, зеленые зоны и натуральные материалы."
+    },
+
+    "more-button": "Подробнее"
+  }
+  ,
+  "stats-section": {
+    "title": "Показатели нашей компании",
+    "subtitle": "Познакомьтесь с результатами, с которыми мы уверенно идем к устойчивому развитию.",
+
+    "item1": {
+      "label": "Устойчивые проектные решения",
+      "description": "Основаны на экологичных и энергоэффективных решениях."
+    },
+    "item2": {
+      "label": "Годы опыта",
+      "description": "Эффективный и долгосрочный профессиональный опыт."
+    },
+    "item3": {
+      "label": "Специалисты",
+      "description": "Команда опытных и профессиональных специалистов."
+    },
+    "item4": {
+      "label": "Активные регионы",
+      "description": "Активные строительные зоны по всему Узбекистану."
+    },
+    "item5": {
+      "label": "Довольные клиенты",
+      "description": "Надежное сотрудничество и качественные услуги."
+    }
+  },
+  "main": "Главная",
+  "about_company": "О компании",
+  "about": {
+    "section_subtitle": "Надёжность и качество — наш приоритет",
+    "title": "Уверенные шаги к устойчивому будущему",
+    "short_desc": "Мы лидируем в строительстве с надёжными, качественными и экологичными решениями",
+    "description": "Компания Durable Development отличается своим подходом, объединяющим современные строительные технологии, экологические решения и энергоэффективность. С каждым проектом мы создаём комфортную, безопасную и долговечную инфраструктуру. Наша команда — это опытные и преданные специалисты, доказавшие свою эффективность по всему Узбекистану.",
+    "founder": {
+      "name": "Джавлонбек Махмудов",
+      "position": "Основатель Durable Development"
+    },
+    "story_title": "Наша История",
+    "story_text": "Durable Development начала свою деятельность в 2015 году. С первых дней компания сделала приоритетом качество, честность и внимание к клиенту. Сегодня компания успешно завершила сотни проектов: жилые дома, офисы, промышленные и социальные объекты.",
+    "mission_title": "Наша Цель",
+    "mission_text": "Наша главная цель — реализовать проекты мечты наших клиентов. Каждое строительство для нас — это ответственность. Мы строим не только прочные здания, но и надёжное партнёрство и устойчивое будущее.",
+    "btn_more": "Подробнее",
+    "team": {
+      "section_subtitle": "Надёжность и качество — наш приоритет",
+      "see_all": "Смотреть всех",
+      "members": [
+        {
+          "name": "Болдуин Калеб",
+          "position": "Основатель"
+        },
+        {
+          "name": "Дейл Хэролд",
+          "position": "Менеджер"
+        },
+        {
+          "name": "Амелия Изабелла",
+          "position": "Руководитель отдела качества"
+        },
+        {
+          "name": "Фабиан Барри",
+          "position": "Оператор"
+        }
+      ]
     }
   }
 }
