--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -550,7 +550,7 @@
       "button": "расписание"
     },
     "bottom": {
-      "copyright": "Авторские права © {{year}} Eleven Water. Все права защищены.",
+      "copyright": "Авторские права © {{year}} Durable Development. Все права защищены.",
       "nav": [
         "Условия использования",
         "Политика конфиденциальности",
